Fix vertical-alignment of email links.

--- a/themes/hugo-creative-portfolio-theme/static/css/style.blue.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/style.blue.css
@@ -2142,6 +2142,7 @@ a.email {
   text-overflow: ellipsis;
   overflow: hidden;
   word-break: normal;
+  vertical-align: bottom;
 }
 
 a {
